# signals-extractor

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/signals_extractor/: __init__.py  utils.py
src/signals_extractor/engine/: __init__.py  context.py  data.py  processor.py  spec.py
src/signals_extractor/engine/helpers/: __init__.py  breakout.py  common.py  momentum.py  reversal.py  trend.py  volume.py
src/signals_extractor/indicators/: __init__.py  _types.py  calc.py  indicators.py  spec.py
src/signals_extractor/signals/: __init__.py  _types.py  calc.py  signals.py  spec.py
